<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_add"
        android:enabled="true"
        android:icon="@drawable/add_24px"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/nav_list"
        android:enabled="true"
        android:icon="@drawable/format_list_bulleted_24px"
        android:title="@string/nav_list" />

    <item
        android:id="@+id/nav_filters"
        android:enabled="true"
        android:icon="@drawable/filter_alt_24px"
        android:title="@string/nav_filters" />

    <item
        android:id="@+id/nav_settings"
        android:enabled="true"
        android:icon="@drawable/manage_accounts_24px"
        android:title="@string/nav_settings" />

</menu>
